api/infra-k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          image: tannero/payments

---
apiVersion: v1
kind: Service
metadata:
  name: payments-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: payments
  ports:
    - name: payments
      port: 4002
      protocol: TCP
      targetPort: 4002
