api/infra-k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: tannero/query

---
apiVersion: v1
kind: Service
metadata:
  name: query-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      port: 4003
      protocol: TCP
      targetPort: 4003
