api/infra-k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
    	kubernetes.io/ingress.class: nginx
    	nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
   rules:
    	- host: nagcloudlab.com
        	http:
           		paths:
              		- path: /?(.*)
					  	backend:
							serviceName: client-clusterip-svc
							servicePort: 3000

					- path: /orders
					 	backend:
							serviceName: query-clusterip-svc
							servicePort: 4003
							
              		- path: /orders/create
                	  	backend:
                   			serviceName: orders-clusterip-svc
                   			servicePort: 4000
					- path: /tickets
                		backend:
                   			serviceName: tickets-clusterip-svc
                   			servicePort: 4001
					- path: /payments
                		backend:
                   			serviceName: payments-clusterip-svc
                   			servicePort: 4002

					- path: /auth
					 	backend:
							serviceName: auth-clusterip-svc
							servicePort: 5000
